fdo#39847: Shrink chart's source ranges to data area.

Otherwise setting data area to e.g. the entire sheet, or even just
entire columns would freeze Calc as it tries to parse the entire data
range faithfully.